
	* twittering-mode.el: Remove redundant entries from an argument of
	`twittering-send-http-request'.
	(twittering-http-get): remove redundant entries from
	`additional-info', an argument of `twittering-send-http-request'.
	(twittering-http-post): likewise.

	* twittering-mode.el: Fix docstring of `twittering-call-api'.
	(twittering-call-api): fix docstring.

2010-10-14  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: `twittering-get-error-message' generates an
	error message with explanation if possible.
	(twittering-get-error-message): generate an error message with
	explanation if possible. `twittering-xml-parse-region' is called
	only when it is required. It is determined by the new argument
	`header-info'.
	(twittering-http-get-default-sentinel): use
	`twittering-get-error-message' for generating a total error
	message, not only explanation.
	(twittering-http-get-list-index-sentinel): likewise.
	(twittering-http-post-default-sentinel): likewise.

2010-10-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Correctly render the format specifier "%L"
	with a preceding whitespace. Thanks to Tom X. Tobin.
	(twittering-generate-format-table): add a preceding whitespace to
	the format specifier "%L". The previous routine contradicts the
	docstring of `twittering-status-format'.
	* test/test-twittering-mode.el: Correct the test for the format
	specifier "%L".

	* test/test-twittering-mode.el: Fix the test for HMAC.

	* twittering-mode.el (twittering-connection-type-table): remove
	obsolete entries.

	* twittering-mode.el: `twittering-release-process' is called as a
	clean-up sentinel.
	(twittering-call-api): accept new option `clean-up-sentinel' for
	`retrieve-timeline'.
	(twittering-http-default-sentinel): do not call
	`twittering-release-process'.
	(twittering-get-and-render-timeline): explicitly register
	`twittering-release-process' as a clean-up sentinel.

	* twittering-mode.el: Classify functions into some groups.
